bug fix: bug css imagens cortadas e overflow global

--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ footer{
 
 .tagGame,
 .user{
-    position: relative;
     display: flex;
     align-items: center;
 
@@ -70,12 +69,11 @@ footer{
 
 .tagGame img{
     position: absolute;
-    left: -40px;
+    left: 62px;
     width: 60px;
 }
 
 .tagUser{
-    position: relative;
     display: flex;
     align-items: center;
     /* width: 20%; */
@@ -85,7 +83,7 @@ footer{
 
 .user img{
     position: absolute;
-    left: -50px;
+    right: 350px;
 
     width: 60px;
 
@@ -263,7 +261,6 @@ footer{
     position: absolute;
     bottom: 110px;
     width: 100vw;
-    height: 100px;
 
     display: flex;
     align-items: center;
@@ -290,7 +287,25 @@ footer{
     gap: 3px;
 }
 
-@media (max-width: 550px){
+@media screen and (max-width: 420px){
+    .user span{
+        font-size: 12px;
+    }
+
+    .user img{
+        width: 50px;
+    }
+
+}
+
+@media screen and (min-width: 421px) and (max-width: 330px){
+    
+    footer{
+        padding: 5px 29px;
+    }
+}
+
+@media screen and (min-width: 331px) and (max-width: 550px){
     #dialog,
     #dialog-recep{
         font-size: 1rem;
@@ -301,17 +316,33 @@ footer{
         white-space: pre;
     }
 
-}
-
-@media (max-width: 779px){
-    #dialog,
-    #dialog-recep,
-    #bubbleChat-pixel p{
-        font-size: 1rem;
+    .tagGame{
+        display: none;
     }
+
+    .tagUser{
+        width: 100%;
+    }
+
+    .linhavertical{
+        display: none;
+    }
+
+    .user img{
+        left: 15px;
+    }
+
+    .user span{
+        padding-left: 15px;
+    }
+
+    footer{
+        padding: 5px 50px;
+    }
+
 }
 
-@media (max-width: 780px){
+@media screen and (min-width: 550px) and (max-width: 780px){
     footer{
         height: 100px;
         padding: 5px 60px;
@@ -330,11 +361,11 @@ footer{
     }
 
     .user img{
-        left: 0px;
+        left: 60px;
     }
 
     .user span{
-        padding-left: 50px;
+        padding-left: 45px;
     }
 
     #dialog,
@@ -344,7 +375,7 @@ footer{
     }
 }
 
-@media (max-width: 900px){
+@media screen and (min-width: 781px) and (max-width: 900px){
     #bubbleChat-pixel p{
         font-size: 1rem;
     }
@@ -360,7 +391,14 @@ footer{
     }
 }
 
-@media (max-width: 1024px){
+@media screen and (max-width: 900px){
+    #dialog-container,
+    #dialog-container-recep{
+        bottom: 215px;
+    }
+}
+
+@media screen and (max-width: 1024px){
     #dialog,
     #dialog-recep,
     #bubbleChat-pixel p{
